2003-04-21  Per Bothner  <per@bothner.com>

	* kawa/lang/EqualPat.java (match):  Add a kludge to for '::'.
	Fixes bug reported 04-11 by Vladimir Tsichevski <wowa@jet.msk.su>.

	* kawa/lang/SyntaxRules.java (<init>):  Better debugging output.

	* kawa/lang/AutoloadProcedure.java:  Call Procedure's getName
	method instead of deprecated name method.
	* kawa/lang/CompileFile.java:  Likewise.
	* kawa/standard/TracedProcedure.java:  Likewise.
	* kawa/standard/cxr.java:  Likewise.
	* kawa/standard/readchar.java:  Likewise.

2003-04-19  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (lexical):  Now in Compilation.
	(<init>):  Update accordingly.
	(push(ScopeExp), pop(ScopeExp), push(Declaration)):  Subsumed
	by version in Compilation.
	(pop(Declaration)):  Removed - never used.
	
2003-04-18  Per Bothner  <per@bothner.com>

	* kawa/lang/AutoloadSyntax.java (toString):  New method.
	(print):  Use toString.

	* kawa/lang/Translator.java (environ):  Remove field.
	(lexical):  Replacement field.
	(<init>):  Allocate lexical instead of environ.
	(lookup, getBinding, rewrite):  Update.
	(matches):  Update for new hygiene handling.
	(rewrite_body):  Combine overloaded methods into one.
	Inline the effect of push - but don't push decls twice.
	(shadowStack):  Remove field.
	(pushDeclStart, popDecls, pushDecls, popBinding):  Removed methods.
	(finishModule, push, pop):  Update accordingly.
	* kawa/standard/Scheme.java (getNamespaceOf):  New method.
	* kawa/standard/set_b.java (rewrite):  Update to use new NameLookup.
	* kawa/lang/SyntaxRules.java (expand):  Likewise.

2003-04-14  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (capturedDeclarations):  Change type.
	(captureDecls):  Allocate capturedDeclarations as Declaration array.
	* kawa/lang/SyntaxRules.java (<init>):  Update accordingly.
	(expand):  Create an aliad Declaration, and push that in the
	Translator lexical scope, instead of the original symbol.