@@ -1,5 +1,8 @@
 2003-04-21  Per Bothner  <per@bothner.com>
 
+	* kawa/lang/Translator.java (getOriginalRef):  New method.
+	(matches, getBinding, rewrite):  Use getOriginalRef.
+
 	* kawa/lang/EqualPat.java (match):  Add a kludge to for '::'.
 	Fixes bug reported 04-11 by Vladimir Tsichevski <wowa@jet.msk.su>.
 
